reward system finished under gift gallery

--- a/gerbil-calendar/src/style.css
+++ b/gerbil-calendar/src/style.css
@@ -2,9 +2,50 @@
 @import url('https://fonts.googleapis.com/css?family=Krub:400,500,600,700');
 @import url('https://fonts.googleapis.com/css2?family=Mali:ital,wght@0,200;0,300;0,400;0,500;0,600;0,700;1,200;1,300;1,400;1,500;1,600;1,700&display=swap');
 
+/*** General stylings ***/
+html, body, #root {
+    background-color: #EFEEEA;
+}
+
+.gerbil-text-1 {
+    font-family: Mali;
+    font-weight: 400;
+    font-size: 30px;
+    line-height: 39px;
+}
+
+.test {
+    margin-right: 20px;
+}
+
+
+
+/** Reactstrap css **/
+.modal-dialog {
+    position: absolute !important;
+    width: 60vw !important;
+    height: 60vh !important;
+    max-width: 60vw !important;
+    max-height: 60vh !important;
+    margin: 15vh 20vw !important;
+}
+
+.modal-header {
+    margin: 25px 5% 0px 5% !important;
+}
+
+.modal-content {
+    width: 100% !important;
+    background-color: #E5E2DD !important;
+}
+
+.close {
+    font-size: 40px !important;
+}
+
 /*** Home Page ***/
 #homePage {
-    height: 100%;
+    height: 80%;
     width: 100%;
 }
 
@@ -27,10 +68,89 @@
 
 }
 
-#homePage div.gerbil-img{
+#homePage div.gerbil-img {
     position: absolute;
-    width: 666px;
-    height: 506px;
+    width: 30vw;
+    height: 40vh;
     right: 15vw;
-    bottom: 10vh;
+    bottom: 20vh;
+}
+
+
+
+/*** gift-gallery-Page ***/
+
+#gift-gallery-Page .intro-message {
+    margin: 3vh 4vw 0vh 4vw;
+}
+
+#gift-gallery-Page .gifts {
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    justify-content: flex-start;
+
+    margin: 3vh 4vw 0vh 4vw;
+}
+
+#gift-gallery-Page .gerbil-gift {
+    flex-grow: 0;
+    flex-basis: auto;
+
+    width: 16.9vw;
+    height: 16.8vh;
+    border-radius: 3px;
+    margin-right: 1.3vw;
+    margin-bottom: 1.6vh;
+    background-color: #E5E2DD;
+}
+
+#gift-gallery-Page .gerbil-gift img {
+    display: none;
+}
+
+#gift-gallery-Page .gerbil-gift.met img {
+    display: block;
+    min-width: 100%;
+    min-height: 100%;
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+}
+
+#gift-gallery-Page .gerbil-gift p.gerbil-gift-req {
+    display: block;
+    text-align: center;
+    line-height: 16.8vh;
+}
+
+#gift-gallery-Page .gerbil-gift.met p.gerbil-gift-req {
+    display: none;
+}
+
+.modal .gerbil-gift-message {
+    width: 90%;
+    margin: 0px 5% 30px 5%;
+}
+
+.modal .gerbil-gift {
+    width: 90%;
+    margin: 0 5%;
+}
+
+.modal .gerbil-gift img {
+    display: block;
+    min-width: 100%;
+    min-height: 100%;
+    max-width: 100%;
+    max-height: 100%;
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+}
+
+.modal .gerbil-gift-name {
+    width: 100%;
+    text-align: center;
+    margin: 20px 0vw;
 }
