--- a/gerbil-calendar/src/style.css
+++ b/gerbil-calendar/src/style.css
@@ -184,3 +184,17 @@ html, body, #root {
     text-align: center;
     margin: 20px 0vw;
 }
+
+
+/** Warning **/
+.warning {
+    display: flex;
+    justify-content: center;
+    align-items: center; 
+    height: 80vh;
+    padding: 0 25vw;
+}
+
+.warning .warning-message {
+    line-height: 60px;
+}
