--- a/gerbil-calendar/src/style.css
+++ b/gerbil-calendar/src/style.css
@@ -94,35 +94,92 @@ a.dropdown-item:hover {
 
 
 /*** Calendar-Page ***/
+#calendarPage {
+    position: relative;
+}
+
 #calendarPage h1, #calendarPage h2 {
     text-align: left;
     font-family: Mali;
     font-weight: 400;
     font-size: 30px;
     line-height: 39px;
-    
+
     margin-left: 2vw;
     margin-top: 2vh;
     display: inline-block;
 
 }
 
+#calendarPage h2 {
+    margin-left: 0vw;
+
+    font-weight: 400;
+    font-size: 25px;
+    line-height: 25px;
+
+}
+
 #calendarPage .calendar-button {
-    display: inline-block;
-    position: fixed;
+    display: block;
+    position: absolute;
     right: 2vw;
     top: 2vh;
 }
+
+#calendarPage .calendar-button > div {
+    display: inline-block;
+}
+
+#calendarPage .btn {
+    background-color: #CBBAB3;
+    border: none;
+    color: black;
+}
+
+#calendarPage .btn:first-of-type {
+    margin-left: 8px;
+}
+
+#calendarPage .gerbil-img img{
+    width:250px;
+}
+
 
 .fc-toolbar-title {
     font-family: Mali;
     font-weight: 400;
     font-size: 30px;
-    line-height: 39px;
+    line-height: 39px;    
 }
 
+.fc, .fc-media-screen, .fc-direction-ltr, .fc-theme-standard {
+    margin: 0vh 2vw;
+    max-width: 98vw;
+}
 
+.fc .fc-timegrid-slot {
+    background-color: #D0C6BA;
+}
 
+.fc-timegrid-axis, .fc-col-header-cell {
+    background-color: #E5E2DD;
+}
+
+.fc-event, .fc-v-event, .fc-timegrid-event {
+    background-color: #C08A87 !important;
+    border: 1px solid #C08A87 !important;
+}
+
+.fc-event-time, .fc-event-title, .fc-col-header-cell-cushion, .fc-timegrid-slot-label-cushion  {
+    color: black;
+    font-family: Mali;
+    font-weight: 400;
+}
+
+.fc-event-main-frame {
+    padding: 6px 8px;
+}
 
 /*** gift-gallery-Page ***/
 
