--- a/gerbil-calendar/src/style.css
+++ b/gerbil-calendar/src/style.css
@@ -340,11 +340,14 @@ a.dropdown-item:hover {
     position: relative;
 }
 
-#task-note-section h2, #task-note-section button, #noteButton, #task-note-section h2, #task-note-section #note-section div:nth-of-type(1), #task-note-section #task-section div:nth-of-type(1)  {
+#task-note-section h2, #task-note-section button, #noteButton, #task-note-section h2, #task-note-section #task-section div:nth-of-type(1)  {
     display: inline-block;
     margin-bottom: 5px;
 }
 
+#task-note-section h2 {
+    height: 40px;
+}
 
 #task-note-section #task-section, #task-note-section #note-section{
     width: 47vw;
