--- a/gerbil-calendar/src/style.css
+++ b/gerbil-calendar/src/style.css
@@ -167,7 +167,7 @@ a.dropdown-item:hover {
 }
 
 #calendarPage .calendar-button {
-    display: block;
+    display: flex;
     position: absolute;
     right: 2vw;
     top: 2vh;
