--- a/gerbil-calendar/src/style.css
+++ b/gerbil-calendar/src/style.css
@@ -136,6 +136,18 @@ a.dropdown-item:hover {
     height: 40vh;
     right: 15vw;
     bottom: 20vh;
+
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    overflow: hidden
+
+}
+
+#homePage div.gerbil-img img {
+    flex-shrink: 0;
+    max-width: 100%;
+    max-height: 100%;
 }
 
 
