fixed spelling errors

--- a/gerbil-calendar/src/calendarStyle.css
+++ b/gerbil-calendar/src/calendarStyle.css
@@ -5,5 +5,11 @@
   }
 
   #calendarPage {
-    -webkit-print-color-adjust: exact !important;
+     -webkit-print-color-adjust: exact !important;
   }
+
+    @page {
+      size: 25cm 35.7cm;
+      margin: 5mm 5mm 5mm 5mm; /* change the margins as you want them to be. */
+  } 
+  
